Fix index page misalignment issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ h6 {
 # Sections
 --------------------------------------------------------------*/
 section {
-  padding: 3rem 0;
+  padding: 3rem 0 0 0;
   overflow: hidden;
 }
 
@@ -465,7 +465,7 @@ section {
 --------------------------------------------------------------*/
 .hero {
   width: 100%;
-  height: 100vh;
+  height: 110vh;
   background: url(../img/hero-bg.png) top center no-repeat;
   background-size: cover;
 }
